--- a/Web.Statu/Views/Subjekt/ObchodySeSponzory.cshtml
+++ b/Web.Statu/Views/Subjekt/ObchodySeSponzory.cshtml
@@ -45,7 +45,7 @@
     }
 
 
-    <h3 id="_vazby_na_politiky">Obchody @Model.Jmeno s firmami navázanými na politiky</h3>
+    <h3 id="_vazby_na_politiky">Obchody @Model.Jmeno s firmami a osobami podporující politické strany</h3>
     <table class="table table-hover table-new table-new--dotted">
         <tbody>
             <tr>
