--- a/Web.Statu/Views/Subjekt/Index.cshtml
+++ b/Web.Statu/Views/Subjekt/Index.cshtml
@@ -60,8 +60,8 @@
             Registr smluv
         </h4>
         <p class="text-muted sub-header-info">
-            Detailní informace o smlouvách, uzavřených @Html.SubjektTypTrojice(Model, "úřadem", "státní organizací", "soukromou firmou")
-            za poslední roky, uvedených v registru smluv.
+            Detailní informace o smlouvách uzavřených @Html.SubjektTypTrojice(Model, "úřadem", "státní organizací", "soukromou firmou")
+            za poslední roky uvedených v registru smluv.
         </p>
         @{
             var currentYear = DateTime.Now.Year;
@@ -152,7 +152,7 @@
     <div>
         <h4>Veřejné zakázky</h4>
         <p class="text-muted sub-header-info">
-            Podrobné informace o veřejných zakázkých, @Html.SubjektTypTrojice(Model, "které úřad vypsal", "které státní organizace vypsala či se jich zúčastnila", "kterých se firma zúčastnila"),
+            Podrobné informace o veřejných zakázkých, @Html.SubjektTypTrojice(Model, "které úřad vypsal", "které státní organizace vypsala či se jich zúčastnila", "kterých se firma zúčastnila")
             jak z věstníku veřejných zakázek, tak z profilů zadavatelů.
         </p>
         @{
@@ -358,10 +358,10 @@
 
 
             <div>
-                <h4><a href="/subjekt2/ObchodySeSponzory/@Model.ICO">Obchody úřadu s firmami a osobami podporující politické strany</a></h4>
+                <h4>Obchody úřadu s firmami a osobami podporující politické strany</h4>
                 <p class="text-muted sub-header-info">
-                    Podrobný přehled smluv, které @Html.SubjektTypTrojice(Model, "úřad ", "organizace ", "")
-                    uzavřela s firmou, která sponzorovala politické straný (není jení majitel).
+                    Podrobný přehled smluv, které @Html.SubjektTypTrojice(Model, "úřad uzavřel ", "organizace uzavřela", "firma uzavřela ")
+                    s firmou, která sponzorovala politické straný (nebo její majitel).
                 </p>
                 <p>
                     @Model.Jmeno uzavřel <b>@Devmasters.Lang.Plural.Get(uradSVazbami.Pocet, "{0} smlouvu;{0} smlouvy;{0} smluv")</b> smluv (tj. <b>@numPercent</b> všech smluv) s firmami a osobami podporující politické strany.
@@ -387,7 +387,7 @@
                     .Distinct();
     }
     <div>
-        <h4><a href="/subjekt2/dodavatele/@Model.ICO">Statistika dodavatelů @(Model.JsemOVM()? "úřadu" : "subjektu" )</a></h4>
+        <h4>Statistika dodavatelů @(Model.JsemOVM()? "úřadu" : "subjektu" )</h4>
         <p class="text-muted sub-header-info">
             Přehledná statistika největších dodavatelů pro @Html.SubjektTypTrojice(Model, "úřad", "organizaci", "firmu")
             podle smluv v registru smluv.
@@ -397,12 +397,12 @@
             @Html.Raw(string.Join(", ", topDodavatele.Take(6).Select(m => $"<a href='{m}'>{HlidacStatu.Lib.Data.Firmy.GetJmeno(m)}</a>")
            )).
         </p>
-        <a href="/subjekt2/dodavatele/@Model.ICO" class="text-uppercase"><strong>Zobrazit podrobnosti o vazbách se sponzory politických stran</strong></a>
+        <a href="/subjekt2/dodavatele/@Model.ICO" class="text-uppercase"><strong>Zobrazit podrobnosti o dodavatelích</strong></a>
 
     </div>
     <hr />
     <div>
-        <h4><a href="/subjekt2/odberatele/@Model.ICO">Statistiky odběratelů @(Model.JsemOVM()? "úřadu" : "subjektu" )</a></h4>
+        <h4>Statistiky odběratelů @(Model.JsemOVM()? "úřadu" : "subjektu" )</h4>
         <p class="text-muted sub-header-info">
             Přehledná statistika největších odběratelů zboží a služeb od @Html.SubjektTypTrojice(Model, "tohoto úřadu", "této organizace ", "této firmy")
             podle smluv v registru smluv.
@@ -412,7 +412,7 @@
             @Html.Raw(string.Join(", ", topOdberatele.Take(6).Select(m => $"<a href='{m}'>{HlidacStatu.Lib.Data.Firmy.GetJmeno(m)}</a>")
            )).
         </p>
-        <a href="/subjekt2/dodavatele/@Model.ICO" class="text-uppercase"><strong>Zobrazit podrobnosti o vazbách se sponzory politických stran</strong></a>
+        <a href="/subjekt2/odberatele/@Model.ICO" class="text-uppercase"><strong>Zobrazit podrobnosti o odběratelích</strong></a>
     </div>
     <hr />
 
@@ -425,17 +425,19 @@
     @if (dsSearch.IsValid && dsSearch.Total > 0)
     {
         <div>
-            <h4><a href="/subjekt2/DalsiDatabaze/@Model.ICO">@(Model.JsemOVM() ? "Úřad" : "Subjekt" ) v dalších databázích</a></h4>
+            <h4>@(Model.JsemOVM() ? "Úřad" : "Subjekt" ) v dalších databázích</h4>
             <p class="text-muted sub-header-info">
                 Na hlídači máme kromě hlavních databází @(HlidacStatu.Lib.Data.External.DataSets.DataSetDB.AllDataSets.Get()?.Count().ToString() ?? "") dalších menších databází.
-                Zde vám podrobně vypíšeme, co v nich @Html.SubjektTypTrojice(Model, "o tomto úřadu", "o této organizaci ", "této firmě") nalezneme.
+                Zde vám podrobně vypíšeme, co v nich @Html.SubjektTypTrojice(Model, "o tomto úřadu", "o této organizaci ", "této firmě") naleznete.
             </p>
             <p>
                 O @(Model.JsemOVM() ? "úřadu" : "subjektu" ) jsme našli @(HlidacStatu.Util.RenderData.Vysledky.PocetVysledku(dsSearch.Total)) 
-                @(Devmasters.Lang.Plural.Get(dsSearch.Results.Count(m=>m.Total>0),"v <b>jedné</b> databázi","ve <b>{0} databázích</b>","v <b>{0} databázích</b>")). 
+                @Html.Raw(Devmasters.Lang.Plural.Get(dsSearch.Results.Count(m=>m.Total>0),"v <b>jedné</b> databázi","ve <b>{0} databázích</b>","v <b>{0} databázích</b>")). 
 
             </p>
         </div>
+                <a href="/subjekt2/DalsiDatabaze/@Model.ICO" class="text-uppercase"><strong>Zobrazit výsledky z dalších databází</strong></a>
+
     }
     <hr />
     <div>
@@ -472,10 +474,12 @@
             if (sum.Urady > 0)
             {
                 <p>
-                    @Html.Raw(sum.Description(Model.ICO, true));
+                    @Html.Raw(sum.Description(Model.ICO, true))
                 </p>
             }
         }
+                        <a href="/subjekt2/DalsiInformace/@Model.ICO" class="text-uppercase"><strong>Zobrazit výsledky z dalších databází</strong></a>
+
 
     </div>
 
