--- a/Web.Statu/Views/Subjekt/Index.cshtml
+++ b/Web.Statu/Views/Subjekt/Index.cshtml
@@ -441,7 +441,7 @@
     }
     <hr />
     <div>
-        <h4><a href="/subjekt2/DalsiInformace/@Model.ICO">Další informace o organizaci</a></h4>
+        <h4>Další informace o organizaci</h4>
         <p class="text-muted sub-header-info">
             Zaměstnanci, rozpočty, organizační struktura a další informace @Html.SubjektTypTrojice(Model, "o tomto úřadu", "o této organizaci ", "této firmě") ze státních rejstříků.
         </p>
@@ -478,7 +478,7 @@
                 </p>
             }
         }
-                        <a href="/subjekt2/DalsiInformace/@Model.ICO" class="text-uppercase"><strong>Zobrazit výsledky z dalších databází</strong></a>
+                        <a href="/subjekt2/DalsiInformace/@Model.ICO" class="text-uppercase"><strong>Zobrazit další informace</strong></a>
 
 
     </div>
