--- a/Web.Statu/Views/Home/OsobaProfil.cshtml
+++ b/Web.Statu/Views/Home/OsobaProfil.cshtml
@@ -5,6 +5,7 @@
 @using System.Linq
 @using HlidacStatu.Util;
 @using Nest;
+@using HlidacStatu.Web.Framework;
 
 @{ Layout = null;
 
@@ -62,22 +63,9 @@
                 </div>
             </div>
             <div class="new-p">
-                @foreach (var contact in Model.GetSocialContact())
+                @foreach (var contact in Model.GetSocialContacts())
                 {
-                    switch (contact.Service)
-                    {
-                        case "Facebook_page":
-                        case "Facebook_profile":
-    <a href="https://www.facebook.com/@contact.Contact"><i class="fab fa-facebook-square fa-2x"></i></a> break;
-                        case "Twitter":
-    <a href="https://www.twitter.com/@contact.Contact"><i class="fab fa-twitter-square fa-2x"></i></a> break;
-                        case "Instagram":
-    <a href="https://www.instagram.com/@contact.Contact"><i class="fab fa-instagram fa-2x"></i></a> break;
-                        case "WWW":
-    <a href="@contact.Contact"><i class="fas fa-globe fa-2x"></i></a>break;
-                        default:
-                            break;
-                    }
+                    <span>@Html.SocialLinkWithIcon(contact.Network,contact.Contact)</span>
                 }
 
 
