--- a/Web.Statu/Views/Subjekt/_subjektLayout.cshtml
+++ b/Web.Statu/Views/Subjekt/_subjektLayout.cshtml
@@ -12,6 +12,7 @@
     ViewBag.Title = Model.title;
     ViewBag.HideTitle = true;
 
+    HlidacStatu.Lib.Data.Relation.AktualnostType? aktualnost = ViewBag.Aktualnost;
 }
 @section breadcrumb
 {
@@ -113,7 +114,7 @@
     <div class="col-sm-1">
     </div>
 
-    @Html.CachedAction(HtmlExtensions.CachedActionLength.Cache12H, Model.viewName, Model.firma, Model.firma.ICO, this?.User?.Identity?.IsAuthenticated)
+    @Html.CachedAction(HtmlExtensions.CachedActionLength.Cache12H, Model.viewName, Model.firma, Model.firma.ICO, this?.User?.Identity?.IsAuthenticated,aktualnost)
 
 
 </div>
